--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mern",
   "version": "0.1.0",
-  "description": "Mern Demo",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:5000/",
   "dependencies": {
-    "mongoose": "^5.5.1",
+    "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
